setup eslint, reorganized directories, added file loader

--- a/assets/scss/components/home.scss
+++ b/assets/scss/components/home.scss
@@ -1,5 +1,5 @@
 #body-container {
-    padding: 30px;
-    color: $deepblue;
-    text-align: center;
+  padding: 30px;
+  color: $black;
+  text-align: center;
 }
