--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,7 @@
-@import 'var';
-@import 'mixins';
-@import 'components/home';
+@import "var";
+@import "mixins";
+@import "base";
+@import "components/home";
+@import "components/nav";
+@import "components/logo";
+@import "components/about";
