--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,23 +1,36 @@
-@import "../assets/css/mixins";
+@import "../assets/css/vars.scss";
+@import "../assets/css/reset.scss";
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  height: 100%;
+  width: 100%;
+}
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 
-.text-changer {
-  padding: 30px;
-  text-align: center;
-}
-.aboutpage {
-  text-align: center;
-  padding: 30px;
-  font-size: 30px;
-}
-.logo {
-  display: block;
-  margin: auto;
+.page-wrapper {
+  min-height: calc(100% - (#{$navbarHeight} + #{$footerHeight}));
 }
 
-@include maxMediaQueries(750px) {
-  nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.pointer-cursor {
+  cursor: pointer;
+}
+
+.no-highlight {
+  user-select: none;
+}
+
+@media screen and (min-width: $MQ600Min) {
+  .page-wrapper {
+    min-height: calc(100% - (#{$navbarHeightMQ600Min} + #{$footerHeight}));
   }
 }
